redbeard is awesome and we're trying to fix the invisible span

--- a/css/style.css
+++ b/css/style.css
@@ -116,20 +116,23 @@ i {
 	background-color: #67727A;
 	line-height: 25pt;
 	color: white;
+	z-index: 1;
 }
-#deleteicon {
+.deleteicon {
 	float: left;
 	margin: 5px 0 0 8px;
 	background-image: url(../images/timessvg.svg);
 	height: 20px;
 	width: 20px;
+	z-index: 2;
 }
-#checkicon {
+.checkicon {
 	float: right;
 	margin: 5px 8px 0 0;
 	background-image: url(../images/checksvg.svg);
 	height: 20px;
 	width: 20px;
+	z-index: 2;
 }
 .strikethrough {
 	position: relative;
@@ -146,6 +149,7 @@ i {
 #container { /*Push footer down.*/
 	padding-bottom: 25px;
 	background-color: #F5F5F5;
+	z-index: 1;
 }
 /*Footer Section*/
 .footer {
